[package]
name = "portr"
version = "1.0.0"
edition = "2021"
authors = ["Kindware.dev <support@kindware.dev>"]
description = "Lightning-fast port inspector and process killer. See what's using any port and kill it instantly."
license = "MIT"
repository = "https://github.com/Brutus1066/portr"
homepage = "https://kindware.dev"
documentation = "https://github.com/Brutus1066/portr#readme"
readme = "README.md"
keywords = ["port", "process", "network", "cli", "tui"]
categories = ["command-line-utilities", "development-tools", "network-programming"]
exclude = [".github/*", "screenshots/*", "docs/*", "CLAUDE.md", ".gitignore"]

[features]
default = []
docker = ["dep:bollard", "dep:tokio"]

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
clap_complete = "4.5"
crossterm = "0.28"
ratatui = "0.29"
sysinfo = "0.32"
colored = "2.1"
tabled = "0.16"
thiserror = "2.0"
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# Optional Docker support
bollard = { version = "0.18", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"

[[bin]]
name = "portr"
path = "src/main.rs"
